# glutproject

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  README.txt  compilar.sh  glutproject  luces.c  luces.h  matematicas.c  matematicas.h  material.c  material.h  modelado.c  modelado.h  otras_escenas.c  revolucion.c  revolucion.h  texturas.c  texturas.h
Debug/: glutproject  luces.d  makefile  matematicas.d  material.d  modelado.d  otras_escenas.d  revolucion.d  subdir.mk  texturas.d
tex/: alriver.tga  aluminio-1024.tga  brick.tga  clouds-360.tga  clouds-tiled.tga  clouds2-360.tga  dirt.tga  eye.tga  icetips.tga  landscape-1024.tga  lava.tga  marble.tga  metal1-1024.tga  nightsky-360-1024.tga  ojo.tga  pixels.tga  random.tga  rock.tga  roof.tga  sky-circular.tga  space-tiled.tga  spaceship-1024.tga  tree1.tga  water.tga  wood.tga  yellow.tga
